--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
     "vue-cli-plugin-element": "^1.0.1",
     "vue-template-compiler": "^2.6.10"
+  },
+  "vue": { 
+    "devServer": { 
+        "port": "8888", 
+        "open" : true 
+    } 
   }
 }
